--- a/Config/DefaultGame.ini
+++ b/Config/DefaultGame.ini
@@ -1,3 +1,5 @@
 [/Script/EngineSettings.GeneralProjectSettings]
 ProjectID=1812D2AF48A59B29B0BEAC9EE8815EEC
 ProjectName=Third Person Game Template
+CopyrightNotice=Start 28/12/2018 - Niall Maple & Dane Maple
+
