--- a/Config/DefaultEngine.ini
+++ b/Config/DefaultEngine.ini
@@ -1,6 +1,6 @@
 [/Script/EngineSettings.GameMapsSettings]
-GameDefaultMap=/Game/ThirdPersonCPP/Maps/ThirdPersonExampleMap
-EditorStartupMap=/Game/ThirdPersonCPP/Maps/ThirdPersonExampleMap
+GameDefaultMap=/Game/Levels/ThirdPersonExampleMap.ThirdPersonExampleMap
+EditorStartupMap=/Game/Levels/ThirdPersonExampleMap.ThirdPersonExampleMap
 GlobalDefaultGameMode="/Script/Quest64.Quest64GameMode"
 
 [/Script/IOSRuntimeSettings.IOSRuntimeSettings]
