--- a/Plugins/ToolbarButtonPlugin/ToolbarButtonPlugin.uplugin
+++ b/Plugins/ToolbarButtonPlugin/ToolbarButtonPlugin.uplugin
@@ -12,12 +12,12 @@
 	"SupportURL": "",
 	"CanContainContent": false,
 	"IsBetaVersion": false,
-	"Installed": false,
+	"Installed": true,
 	"Modules": [
 		{
 			"Name": "ToolbarButtonPlugin",
 			"Type": "Editor",
-			"LoadingPhase": "Default"
+			"LoadingPhase": "PreDefault"
 		}
 	]
 }
