--- a/Config/DefaultEngine.ini
+++ b/Config/DefaultEngine.ini
@@ -1,8 +1,3 @@
-[/Script/EngineSettings.GameMapsSettings]
-GameDefaultMap=/Game/Levels/ThirdPersonExampleMap.ThirdPersonExampleMap
-EditorStartupMap=/Game/Levels/ThirdPersonExampleMap.ThirdPersonExampleMap
-GlobalDefaultGameMode="/Script/Quest64.Quest64GameMode"
-
 [/Script/IOSRuntimeSettings.IOSRuntimeSettings]
 MinimumiOSVersion=IOS_10
 bSupportsPortraitOrientation=False
@@ -66,3 +61,20 @@ AsyncSceneSmoothingFactor=0.990000
 InitialAverageFrameRate=0.016667
 PhysXTreeRebuildRate=10
 DefaultBroadphaseSettings=(bUseMBPOnClient=False,bUseMBPOnServer=False,MBPBounds=(Min=(X=0.000000,Y=0.000000,Z=0.000000),Max=(X=0.000000,Y=0.000000,Z=0.000000),IsValid=0),MBPNumSubdivs=2)
+
+[/Script/EngineSettings.GameMapsSettings]
+EditorStartupMap=/Game/Levels/ThirdPersonExampleMap.ThirdPersonExampleMap
+LocalMapOptions=
+TransitionMap=None
+bUseSplitscreen=True
+TwoPlayerSplitscreenLayout=Horizontal
+ThreePlayerSplitscreenLayout=FavorTop
+FourPlayerSplitscreenLayout=Grid
+bOffsetPlayerGamepadIds=False
+GameInstanceClass=/Script/Engine.GameInstance
+GameDefaultMap=/Game/Levels/ThirdPersonExampleMap.ThirdPersonExampleMap
+ServerDefaultMap=/Engine/Maps/Entry.Entry
+GlobalDefaultGameMode=/Script/Engine.GameModeBase
+GlobalDefaultServerGameMode=None
+
+
